--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.4.RELEASE</version>
     </parent>
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
+
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
