--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
