--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
             <artifactId>qrgen</artifactId>
             <version>1.4</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.8</version>
+        </dependency>
+
     </dependencies>
 
 </project>
