--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-spring.datasource.username=test
-spring.datasource.password=test
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
