--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8090
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=eventmail5wro@gmail.com
+spring.mail.password=Dupa12345
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
