--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.port=8090
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=eventmail5wro@gmail.com
+spring.mail.password=Dupa12345
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
