--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,21 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
     </dependencies>
+
+    <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+
 
 </project>
