Event Controller now use all Service methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.mail.username=eventmail5wro@gmail.com
 spring.mail.password=Dupa12345
 spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.starttls.required=truees.mail.smtp.starttls.required=true
